--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "jquery-ui": "^1.11.4",
-    "moment": "^2.12.0"
+    "moment": "^2.12.0",
+    "font-awesome": "^4.5.0"
   }
 }
