--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery-ui": "^1.12.1",
     "moment": "^2.18.1",
     "font-awesome": "^4.7.0",
-    "bootbox.js": "bootbox#^4.4.0"
+    "bootbox.js": "bootbox#^4.4.0",
+    "mustache.js": "mustache#^2.3.0"
   }
 }
